--- a/smartgraph.css
+++ b/smartgraph.css
@@ -22,6 +22,12 @@
     -fx-opacity: 0.8;
 }
 
+.edge:hover {
+    -fx-stroke-width: 4;
+    -fx-cursor: hand; /* Change the cursor to a hand */
+}
+
+
 .arrow {
     -fx-stroke-width: 2;
     -fx-stroke: #5E2D79; /* Updated arrow stroke color */
@@ -39,4 +45,9 @@
 
 .topic {
     -fx-stroke-width: 5;
+}
+
+.selectedEvent {
+    -fx-stroke: black;
+    -fx-stroke-width: 2;
 }
