--- a/src/main/resources/org/example/demojavafx/main_window.fxml
+++ b/src/main/resources/org/example/demojavafx/main_window.fxml
@@ -2,11 +2,11 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 
-<?import java.net.URL?>
-<BorderPane xmlns="http://javafx.com/javafx/8"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.demojavafx.MainWindow">
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourControllerClass">
     <stylesheets>
         <URL value="@styles.css" />
     </stylesheets>
@@ -20,17 +20,24 @@
             </Menu>
         </MenuBar>
     </top>
-    <!-- Add the rest of your UI components here -->
     <center>
         <VBox alignment="CENTER" spacing="10">
-            <Button text="Choose Files" onAction="#chooseFiles"/>
-            <TableView fx:id="fileInfoTable">
+            <HBox alignment="CENTER" spacing="10">
+                <Label text="Search:"/>
+                <TextField promptText="Enter search criteria"/>
+                <Button text="Search" onAction="#search"/>
+            </HBox>
+            <TableView fx:id="fileInfoTable" styleClass="custom-table-view">
                 <columns>
-                    <TableColumn text="File Name"/>
-                    <TableColumn text="Title"/>
+                    <TableColumn text="File Name" styleClass="table-column"/>
+                    <TableColumn text="Title" styleClass="table-column"/>
+                    <TableColumn text="Select" fx:id="selectColumn"/>
                 </columns>
             </TableView>
-            <Button text="View Event Graph" onAction="#viewEventGraph"/>
+            <HBox alignment="CENTER" spacing="10">
+                <Button text="View Details" onAction="#viewDetails"/>
+                <Button text="Export Data" onAction="#exportData"/>
+            </HBox>
         </VBox>
     </center>
 </BorderPane>
