--- a/src/main/resources/org/example/demojavafx/main_window.fxml
+++ b/src/main/resources/org/example/demojavafx/main_window.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 
 <?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
@@ -40,15 +42,20 @@
                     </columns>
                 </TableView>
                 <Button text="Export Specification" onAction="#exportSpecification" styleClass="form-button"/>
-                <HBox alignment="CENTER" spacing="10">
-                    <Label text="Zoom:" styleClass="form-label" />
-                    <Slider fx:id="zoomSlider" min="1.0" max="5.0" value="1.0" showTickLabels="true" showTickMarks="true" />
-                    <Button text="Reset Zoom" onAction="#resetZoom" styleClass="form-button"/>
-                </HBox>
             </VBox>
-            <VBox>
+            <StackPane>
                 <Canvas fx:id="eventGraphCanvas" width="400" height="400" />
-            </VBox>
+                <VBox alignment="BOTTOM_RIGHT" spacing="10" styleClass="zoom-panel">
+                    <Slider fx:id="zoomSlider" min="1.0" max="5.0" value="1.0" showTickLabels="true" showTickMarks="true" orientation="VERTICAL" />
+                    <Button onAction="#resetZoom" styleClass="reset-button">
+                        <graphic>
+                            <ImageView fitWidth="20" fitHeight="20">
+                                <Image url="@reset-icon.png"/>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                </VBox>
+            </StackPane>
         </SplitPane>
     </center>
 </BorderPane>
