--- a/src/main/resources/org/example/demojavafx/main_window.fxml
+++ b/src/main/resources/org/example/demojavafx/main_window.fxml
@@ -34,7 +34,8 @@
                 <Label text="Choose files to be used to draw the event graph" styleClass="form-label" />
                 <HBox alignment="CENTER" spacing="10">
                     <Button text="Choose Files" onAction="#chooseFiles" styleClass="form-button"/>
-                    <Button text="View Event Graph" onAction="#viewEventGraph" styleClass="form-button"/>
+                    <Button text="Add Service" onAction="#addService" styleClass="form-button"/>
+                    <Button text="CreateLink" onAction="#createLink" styleClass="form-button"/>
                 </HBox>
 
                 <TableView fx:id="fileInfoTable" styleClass="custom-table-view">
