--- a/src/main/resources/org/example/demojavafx/create_link.fxml
+++ b/src/main/resources/org/example/demojavafx/create_link.fxml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import org.controlsfx.control.ToggleSwitch?>
+
 <GridPane xmlns:fx="http://javafx.com/fxml" alignment="center"
-          fx:controller="org.example.demojavafx.CreateLink">
+          fx:controller="org.example.demojavafx.CreateLink" hgap="10" vgap="10">
+
+    <columnConstraints>
+        <ColumnConstraints hgrow="NEVER" />
+        <ColumnConstraints hgrow="ALWAYS" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER" />
+    </rowConstraints>
+
     <Label text="Choose a topic:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
     <ComboBox fx:id="topicComboBox" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
@@ -16,7 +28,9 @@
     <ToggleSwitch fx:id="directionToggleSwitch" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
     <Label text="Select event:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+    <HBox spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <ComboBox fx:id="existingEventComboBox" />
+        <Button text="Create New Event" onAction="#handleNewEvent" />
+    </HBox>
 
-    <Button text="Create New Event" onAction="#handleNewEvent" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-    <ComboBox fx:id="existingEventComboBox" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 </GridPane>
