--- a/src/main/resources/org/example/demojavafx/main_window.fxml
+++ b/src/main/resources/org/example/demojavafx/main_window.fxml
@@ -35,7 +35,9 @@
                 <HBox alignment="CENTER" spacing="10">
                     <Button text="Choose Files" onAction="#chooseFiles" styleClass="form-button"/>
                     <Button text="Add Service" onAction="#addService" styleClass="form-button"/>
+                    <Button text="Add topic(queue)" onAction="#addTopic"    styleClass="form-button"/>
                     <Button text="CreateLink" onAction="#createLink" styleClass="form-button"/>
+
                 </HBox>
 
                 <TableView fx:id="fileInfoTable" styleClass="custom-table-view">
