--- a/src/main/resources/org/example/demojavafx/chooseBrokerElement.fxml
+++ b/src/main/resources/org/example/demojavafx/chooseBrokerElement.fxml
@@ -10,7 +10,7 @@
     xmlns:fx="http://javafx.com/fxml"
     fx:controller="org.example.demojavafx.ChooseBrokerElement">
     <children>
-        <Label text="Choose Broker:" layoutX="20.0" layoutY="20.0" />
-        <ComboBox fx:id="brokerComboBox" layoutX="120.0" layoutY="20.0" />
+        <ComboBox fx:id="brokerComboBox" styleClass="comboBox" layoutX="120.0" layoutY="20.0"
+            onAction="#handleBrokerSelection"/>
     </children>
 </VBox>
