--- a/src/main/resources/org/example/demojavafx/main_window.fxml
+++ b/src/main/resources/org/example/demojavafx/main_window.fxml
@@ -40,7 +40,7 @@
     </top>
     <center>
         <SplitPane dividerPositions="0.5">
-         <GridPane>
+         <GridPane fx:id="gridPane">
            <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="100.0" />
            </columnConstraints>
@@ -50,7 +50,7 @@
              <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="0.0" vgrow="SOMETIMES" />
            </rowConstraints>
             <children>
-               <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
+               <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
                  <tabs>
                    <Tab text="servises">
                         <content>
