--- a/src/main/resources/org/example/demojavafx/main_window.fxml
+++ b/src/main/resources/org/example/demojavafx/main_window.fxml
@@ -1,27 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="533.0" prefWidth="551.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demojavafx.MainWindow">
+<BorderPane prefHeight="533.0" prefWidth="551.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demojavafx.MainWindow">
     <stylesheets>
         <URL value="@styles.css" />
     </stylesheets>
@@ -29,8 +13,8 @@
         <MenuBar fx:id="menuBar" prefHeight="10.0" prefWidth="519.0">
             <Menu text="File">
             <items>
-                <MenuItem mnemonicParsing="false" text="Load File" onAction="#loadGraph" />
-                <MenuItem mnemonicParsing="false" text="Save File" onAction="#saveGraph" />
+                <MenuItem mnemonicParsing="false" onAction="#loadGraph" text="Load File" />
+                <MenuItem mnemonicParsing="false" onAction="#saveGraph" text="Save File" />
             </items>
             </Menu>
             <Menu text="Help">
@@ -48,6 +32,7 @@
              <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
              <RowConstraints vgrow="SOMETIMES" />
              <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="0.0" vgrow="SOMETIMES" />
+               <RowConstraints />
            </rowConstraints>
             <children>
                <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="1">
@@ -122,6 +107,7 @@
                      <Button mnemonicParsing="false" onAction="#clearGraph" text="Clear" />
                  </items>
                </ToolBar>
+               <Button fx:id="CheckButton" onAction="#check" styleClass="form-button" text="Check" GridPane.rowIndex="3" />
             </children>
          </GridPane>
             <StackPane fx:id="pane">
